# mediakit

./: CHANGELOG.md  CITATION.cff  CMakeLists.txt  NOTICE  README.md  REPO_POLICY.md
.github/workflows/: ci-cpp.yml
cmake/: mediakitConfig.cmake.in
docs/: architecture.md  overview.md
include/mediakit/: media_session.hpp  media_source.hpp  mediakit.hpp
include/mediakit/plugin/: decoder_plugin.hpp
src/: media_session.cpp
tests/: CMakeLists.txt  test_media_contracts.cpp
